--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Welcome to <%= listProducts %></p>
 </body>
 </html>
